--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
-    "express-validator": "^6.12.2"
+    "express-validator": "^6.12.2",
+    "mongoose": "^6.0.9"
   }
 }
