--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-Port=4000
+PORT=4000
 Db_Connection=mongodb+srv://Prueba:yWQx7KGHM6YsSGmy@ventas-c3.s2ski.mongodb.net/Puebas_mern
 Secret_JWT=@Mi_Secret_Key@
